[package]
name = "timetrace2"
version = "0.1.0"
authors = ["Paul Richards <paul.richards@gmail.com>"]
edition = "2018"

[dependencies]
memmap = "0.7"
rand = "0.7"
stopwatch = "0.0.7"
log = "0.4"
env_logger = "0.7"
owning_ref = "0.4"
image = "0.23"
ordered-float = "2.0"
clap = "2.33"
rayon = "1.4.1"
approx = "0.3.2"

[dev-dependencies]
tempfile = "3.0"
test-env-log = "0.2.2"

#[profile.dev]
#opt-level = 1
